# entharion

./: .gitignore  DECODE.md  NOTES.md  README.md  pyproject.toml  terp.py
docs/: docs.css  index.html  infocom-fact-sheet.txt
src/entharion/: __main__.py  cpu.py  instruction.py  loader.py  memory.py  numbers.py  opcode.py  opcodes.py  routine.py  stack.py  trace.py
tools-mac/: infodump  inform6  txd
zcode-checkers/czech/: czech.z8
zcode-infocom/: zork0-r366-s890323.z6  zork0.blb
zcode-infocom-source/zork0-r393-s890714/: castle.zabstr  castle.zap  chess.zabstr  chess.zap  clues.zabstr  clues.zap  defs.cmp  defs.zabstr  defs.zap  fenshire.zabstr  fenshire.zap  find.bak  find.zabstr  find.zap  globals.zabstr  globals.zap  highway.zabstr  highway.zap  input.zabstr  input.zap  jester.zabstr  jester.zap  lake.zabstr  lake.zap  library.zabstr  library.zap  misc.zabstr  misc.zap  oracle.zabstr  oracle.zap  parser.bak  parser.zabstr  parser.zap  pic.zabstr  pic.zap  pmem.zabstr  prare.zabstr  prare.zap  prologue.zabstr  prologue.zap  (+40 more)
zcode-inform/: advent-r9-s260512.z3  advent-r9-s260512.z4  advent-r9-s260512.z5  custard-r1-s000314.z7
zcode-inform-source/bluechairs-r2-s041229/: Makefile  README  abbrevs.inf  beatrice.inf  bluechairs.inf  cubicle.inf  driving.inf  epilogue.inf  gas-station.inf  help.inf  inaugural.inf  party.inf  work.inf
