[tool.poetry]
name = "entharion"
version = "0.1.0"
description = ""
authors = ["Jeff Nyman <quendor.app@gmail.com>"]

[tool.poetry.scripts]
terp = "terp:main"

[tool.poetry.dependencies]
python = "^3.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
