[tool.poetry]
name = "entharion"
version = "0.1.0"
description = "A Minimal Z-Machine Emulator and Interpreter"
authors = ["Jeff Nyman <quendor.app@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jeffnyman/entharion"
keywords = [
    "z-machine",
    "interpreter",
    "emulator"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment"]

[tool.poetry.scripts]
grueslayer = "entharion.__main__:main"

[tool.poetry.dependencies]
python = "^3.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
